fix width overflow

--- a/css/site.styl
+++ b/css/site.styl
@@ -58,19 +58,19 @@ img
 #organs
   position: fixed
   height: 100vh
-  width: 100vw
+  width: 100%
   
 #gradient-background
   background-image: linear-gradient(to bottom, $color-white 10%, $color-yellow 35%, $color-black 100%)
   position: fixed
   top: 0
   left: 0
-  width: 100vw
+  width: 100%
   height: 35vh
   
 #main-container 
   position: absolute
-  width: 100vw
+  width: 100%
   margin-top: 100vh
   top: 0
   left: 0
